--- a/admin/package.json
+++ b/admin/package.json
@@ -17,10 +17,10 @@
     "mongoos": "^0.0.1-security",
     "mongoose": "^7.5.3",
     "multiparty": "^4.2.3",
-    "next": "latest",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-sweetalert2": "^0.6.0"
   },
   "devDependencies": {
