--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.0.8"
+    "stripe": "^13.10.0",
+    "styled-components": "^6.0.8",
+    "tsparticles-confetti": "^2.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
