--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.5.1",
+    "mongodb-adapter": "^0.0.4",
     "mongoose": "^7.6.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^13.10.0",
